--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
             </div>
         </div>
     </div>
+    <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
